sdk/Include/LogitechSteeringWheelLib.h

typedef struct LogiControllerPropertiesData
{
	bool forceEnable;
	int overallGain;
	int springGain;
	int damperGain;
	bool defaultSpringEnabled;
	int defaultSpringGain;
	bool combinePedals;
	int wheelRange;
	bool gameSettingsEnabled;
	bool allowGameSettings;
}LogiControllerPropertiesData;
//DIJOYSTATE2 redefined with basic types in order to make it work with UDK DLLBind
typedef struct DIJOYSTATE2ENGINES {
	int				lX;                     /* x-axis position              */
	int				lY;                     /* y-axis position              */
	int				lZ;                     /* z-axis position              */
	int				lRx;                    /* x-axis rotation              */
	int				lRy;                    /* y-axis rotation              */
	int				lRz;                    /* z-axis rotation              */
	int				rglSlider[2];           /* extra axes positions         */
	unsigned int	rgdwPOV[4];             /* POV directions               */
	unsigned char   rgbButtons[128];        /* 128 buttons                  */
	int				lVX;                    /* x-axis velocity              */
	int				lVY;                    /* y-axis velocity              */
	int				lVZ;                    /* z-axis velocity              */
	int				lVRx;                   /* x-axis angular velocity      */
	int				lVRy;                   /* y-axis angular velocity      */
	int				lVRz;                   /* z-axis angular velocity      */
	int				rglVSlider[2];          /* extra axes velocities        */
	int				lAX;                    /* x-axis acceleration          */
	int				lAY;                    /* y-axis acceleration          */
	int				lAZ;                    /* z-axis acceleration          */
	int				lARx;                   /* x-axis angular acceleration  */
	int				lARy;                   /* y-axis angular acceleration  */
	int				lARz;                   /* z-axis angular acceleration  */
	int				rglASlider[2];          /* extra axes accelerations     */
	int				lFX;                    /* x-axis force                 */
	int				lFY;                    /* y-axis force                 */
	int				lFZ;                    /* z-axis force                 */
	int				lFRx;                   /* x-axis torque                */
	int				lFRy;                   /* y-axis torque                */
	int				lFRz;                   /* z-axis torque                */
	int				rglFSlider[2];          /* extra axes forces            */
} DIJOYSTATE2ENGINES;
//Call this function before any other of the following
bool LogiSteeringInitialize(bool ignoreXInputControllers);
//Update the status of the controller
bool LogiUpdate();
//Get the state of the controller in the simplified struct DIJOYSTATE2UDK. Use this only if working with UDK DLLBind
DIJOYSTATE2ENGINES* LogiGetStateENGINES(const int index);
//Get the computer specific operating system assigned controller GUID at a given index
bool LogiGetDevicePath(const int index, wchar_t *buffer, int  bufferSize);
//Get the friendly name of the product at index
bool LogiGetFriendlyProductName(const int index, wchar_t *buffer, int  bufferSize);
//Check if a generic device at index is connected
bool LogiIsConnected(const int index);
//Check if the device connected at index is of the same type specified by deviceType
bool LogiIsDeviceConnected(const int index, const int deviceType);
//Check if the device connected at index is made from the manufacturer specified by manufacturerName
bool LogiIsManufacturerConnected(const int index, const int manufacturerName);
//Check if the device connected at index is the model specified by modelName
bool LogiIsModelConnected(const int index, const int modelName);
//Check if the device connected at index is currently triggering the button specified by buttonNbr
bool LogiButtonTriggered(const int index, const int buttonNbr);
//Check if on the device connected at index has been released the button specified by buttonNbr
bool LogiButtonReleased(const int index, const int buttonNbr);
//Check if on the device connected at index is currently being pressed the button specified by buttonNbr 
bool LogiButtonIsPressed(const int index, const int buttonNbr);
//Generate non-linear values for the axis of the controller at index
bool LogiGenerateNonLinearValues(const int index, const int nonLinCoeff);
//Get a non-linear value from a table previously generated
int LogiGetNonLinearValue(const int index, const int inputValue);
//Check if the controller at index has force feedback
bool LogiHasForceFeedback(const int index);
//Check if the controller at index is playing the force specified by forceType
bool LogiIsPlaying(const int index, const int forceType);
//Play the spring force on the controller at index with the specified parameters
bool LogiPlaySpringForce(const int index, const int offsetPercentage, const int saturationPercentage, const int coefficientPercentage);
//Stop the spring force on the controller at index
bool LogiStopSpringForce(const int index);
//Play the constant force on the controller at index with the specified parameter
bool LogiPlayConstantForce(const int index, const int magnitudePercentage);
//Stop the constant force on the controller at index
bool LogiStopConstantForce(const int index);
//Play the damper force on the controller at index with the specified parameter
bool LogiPlayDamperForce(const int index, const int coefficientPercentage);
//Stop the damper force on the controller at index
bool LogiStopDamperForce(const int index);
//Play the side collision force on the controller at index with the specified parameter
bool LogiPlaySideCollisionForce(const int index, const int magnitudePercentage);
//Play the frontal collision force on the controller at index with the specified parameter
bool LogiPlayFrontalCollisionForce(const int index, const int magnitudePercentage);